[package]
name = "uzi_eyes_murder_drones"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = "0.9.3"
image = "0.25.10"
reqwest = {version = "0.13.2", features = ["blocking"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

